# secret_santa

./: Cargo.toml  compose.override.yml  docker-compose.override.yml  docker-compose.yml  readme.md
.github/workflows/: backend.yaml  frontend.yaml
backend/: .infisical.json  Cargo.toml  alembic.ini  docker-compose-dev.yml  docker-compose.yml  loki-config.yaml  otel-collector-config.yaml  prometheus-config.yml  pyproject.toml  readme.md
backend/alembic/: env.py
backend/alembic/versions/: 07b2b918533c_initial.py  e8c801d642b5_change_field_names.py  fe4750e917c0_added_times_viewed_to_table.py
backend/data/: santa_data.json
backend/docker/backend/: Dockerfile
backend/migrations/2024-10-06-151319_create_assignments/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/secret_santa/: app.py  config.py  controllers.py  database.py  models.py  telemetry.py
docker/backend/: .dockerignore
frontend/: README.md  backend-api.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  app.css  init.ts  main.ts
frontend/src/assets/: tailwind.css
frontend/src/components/: BrandLogo.vue  DarkModeToggle.vue  ErrorComponent.vue  FooterComponent.vue  TextTitle.vue
frontend/src/lib/: api.ts  spec.d.ts
frontend/src/router/: index.ts
frontend/src/views/: AssignedPerson.vue  HomeView.vue  RegisterView.vue
