[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["ChidiRNweke <chidi125@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
opentelemetry-api = "^1.28.1"
opentelemetry-sdk = "^1.28.1"
opentelemetry-instrumentation-fastapi = "^0.49b1"
opentelemetry-instrumentation-logging = "^0.49b1"
infisical-python = "^2.3.5"
opentelemetry-exporter-otlp = "^1.28.2"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
